# npkn-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
npkn/: api.py  constants.py  main.py  utils.py
npkn/commands/: __init__.py  deploy.py  helpers.py  new.py  pull.py  run.py
tests/: test_api.py  test_main.py  test_napkin_cli.py  test_utils.py
