[tool.poetry]
name = "npkn"
version = "0.1.0"
description = "Napkin.io CLI"
authors = ["Syps <nick@napkin.io>"]

[tool.poetry.scripts]
npkn = "npkn.main:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.2"
toml = "^0.10.2"
requests = "^2.27.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
bumpversion = "^0.6.0"
black = "^22.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
